--- a/BartekApp/Components/Layout/NavMenu.razor
+++ b/BartekApp/Components/Layout/NavMenu.razor
@@ -4,11 +4,11 @@
     </div>
 </div>
 
-@*<input type="checkbox" title="Navigation menu" class="navbar-toggler"/>*@
+<input type="checkbox" title="Navigation menu" class="navbar-toggler"/>
 
-@*<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
+<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="flex-column">
-        <div class="nav-item px-3">
+        @*<div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
             </NavLink>
@@ -42,6 +42,6 @@
             <NavLink class="nav-link" href="HistoryPage">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Historia
             </NavLink>
-        </div>
+        </div>*@
     </nav>
-</div>*@
+</div>
