--- a/BartekApp/Components/Pages/DeliveryPage.razor
+++ b/BartekApp/Components/Pages/DeliveryPage.razor
@@ -34,7 +34,7 @@
 </div>
 
 @code {
-    private Transaction transaction = new() { IsIncome = true};
+    private Transaction transaction = new() { IsIncome = true, ToBalance = false};
     private bool showSuccess = false;
     private DateTime date = DateTime.Now;
     
@@ -44,7 +44,7 @@
         transaction.CategoryType = CashCategory.Delivery;
         await TransactionService.AddTransactionAsync(transaction);
         showSuccess = true;
-        transaction = new() { IsIncome = true};
+        transaction = new() { IsIncome = true, ToBalance = false};
         
         await Task.Delay(1000);
         Navigation.NavigateTo("/");
